Fix contact us page & Socmed Icon
- added subject field
- css and html clean up
- input box spacing
- added gotcha for anti spam

note:
- subject field spacing still unsolved, now using stupid hack.
- socmed icon youtube is too small
- submit button on left

--- a/css/ss_pm_cg_contactUs.css
+++ b/css/ss_pm_cg_contactUs.css
@@ -1,3 +1,55 @@
 html, body {
     height:100%;
 }
+
+
+#skrollr-body contact-us-content {
+    margin-bottom:30px;
+}
+
+#skrollr-body contact-us-text {
+    margin-bottom:30px;
+}
+
+
+
+
+#skrollr-body form label {
+    margin-top:10px;
+}
+
+#skrollr-body form input {
+    margin-bottom:10px;
+    width:100%;
+    height:40px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    padding: 5px 8px;
+    resize: none;
+}
+
+#skrollr-body form textarea {
+    margin-bottom:20px;
+    width: 100%;
+    height: 100px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    padding: 5px 8px;
+    resize: none;
+}
+
+#skrollr-body form select {
+    margin-bottom:10px;
+    width: 50%;
+    height: 40px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    margin-right:50vw; /* ini tidak benar */
+}
+
+
+#skrollr-body .submit-button {
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:20px;
+}
